moved discussion options down to prevent overlapping issues

--- a/opinion-app/src/pages/discussion-detail/discussion-detail.styles.css
+++ b/opinion-app/src/pages/discussion-detail/discussion-detail.styles.css
@@ -5,8 +5,8 @@
     justify-content: flex-start;
     flex-direction: column;
     overflow-y: auto;
-    padding-top: var(--basic-padding);
 }
+
 .discussion-info{
     width: 100%;
 }
@@ -23,10 +23,8 @@
 }
 
 .discussion-info-extra{
-    padding-top: calc(var(--basic-padding) * 0.5);
-    padding-bottom: calc(var(--basic-padding) * 2);
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
 }
 
